Adding results from rbpi

--- a/latex/practica1.tex
+++ b/latex/practica1.tex
@@ -67,12 +67,16 @@
 			\cline{2-7}
 			& Latencia media (ns) & Latencia max (ns)& Latencia media (ns) & Latencia max (ns)& Latencia media (ns) & Latencia max (ns)\\ 
 			\hline
-			S1 & & & & & &\\ 
+			S1 & 3597& 4589910& 27715&  94920& 25250& 94198\\ 
 			\hline
-			S2 & & & & & &\\ 
+			S2 & 5562& 4804750& 25960& 144730& 16921& 85624\\ 
 			\hline
-			S3 & & & & & &\\ 
+			S3 & 3882& 5362156& 25212& 230656& 25932& 80771\\ 
 			\hline
 		\end{tabular}
+	\end{center}
+	\begin{center}
+		\includegraphics[width=\textwidth]{noRt}\\
+		\includegraphics[width=\textwidth]{Rt}
 	\end{center}
 \end{document}
